# apofasi

./: .cursorrules  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.ollama  GUIDA_TEST.md  Makefile  Modelfile.logppt  Modelfile.logppt.fast  Modelfile.roberta  Modelfile.template_extractor  README.md  README_CLI_PRESIDIO.md  README_DRAIN_INFINITO.md  README_DUAL_DRAIN3.md  chapter3.tex  cli_parser.py  debug_gzip_reader.py  debug_loop_analysis.py  debug_xml_parser.py  docker-compose.yml  example_dual_drain3.py  example_hybrid_modes.py  example_timestamp_normalization.py  pyproject.toml  requirements.txt  run_simple_test.py  run_ui.py  setup.py  setup_logppt_fast.sh  setup_logppt_ollama.sh  setup_template_extractor.sh  test_android_parsing.py  test_coherence.py  test_drain_infinito.py  test_dual_drain3.py  test_log.xml  test_logppt_ollama_integration.py  test_ollama_log_parsing.py  (+7 more)
config/: centralized_regex.yaml  config.ini  config.yaml  parser_config.yaml  regex_patterns.yaml
examples/: FGT80FTK22013405.root.elog.txt  FGT80FTK22013405.root.elog.txt:Zone.Identifier  FGT80FTK22013405.root.tlog.txt  aaa9b30098d31c056625c603cf1a98e6e10afe77_2025-06-30_2025-07-07.csv  ai_ml_cybersecurity_dataset.xlsx  chatbot_training.json  code_generation.yaml  conversational_dataset.json  example_csv.csv  example_json.json  example_syslog.txt  qa_dataset.txt  sample_logs.txt  sentiment_analysis.csv  sentiment_classification.csv  simple_test.json  test.xlsx
examples_smoke/: sample.csv  sample.json
finetuned_models/: QATEST.Modelfile  QATEST_metadata.json  qwe_QA.Modelfile  qwe_QA_metadata.json  test-model.Modelfile
logppt/: parsing_base.py  parsing_cache.py  parsing_par.py  postprocess.py  (+1 more)
(+270 files in other folders)
